[package]
name = "verzion"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0"
serde-xml-rs = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.51", features = ["derive"] }
chrono = "0.4.42"
reqwest = { version = "0.12.24", features = ["json"] }
url = "2.5.7"
urlencoding = "2.1.3"
tokio = { version = "1", features = ["full"] }
colored = "3.0.0"
merge = "0.2.0"
once_cell = "1.21.3"
quick-xml = { version = "0.38.4", features = ["serialize"] }
